fix: change alignment of tags

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -215,7 +215,7 @@ body.vg-sidebar-open {
 .vg-sidebar-tags {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   padding: 0 24px;
   gap: 10px;
 }
